feat: 중간저장 #2